Thu Apr  3 12:56:01 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, common.mk, configure.in, {win32,bcc32}/Makefile.sub
	  (MINIOBJS, ARCHMINIOBJS): separated.

Thu Apr  3 09:00:45 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_set_sequence, iseq_insns_unification,
	  insn_data_to_s_detail): constified.

	* iseq.c (insn_operand_intern, ruby_iseq_disasm_insn): ditto.

	* template/{insns_info,opt_sc,optunifs}.inc.tmpl: ditto.

	* tool/instruction.rb (OptUnifsIncGenerator): ditto.

Wed Apr  2 22:29:35 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* rational.c (nurat_int_check): function for DRY integer check.

	* numeric.c (num_rdiv): should always return rational number.

	* rational.c (nurat_add, nurat_sub, nurat_mul, nurat_fdiv,
	  nurat_cmp): use rb_num_coerce_bin().

	* rational.c (nurat_division): does / and rdiv.

	* .gdbinit (rp): no longer use rb_p().

Wed Apr  2 06:52:31 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* .gdbinit (rp): supports rational and complex numbers.  it's
	  cheating since it uses rb_p().

Wed Apr  2 06:24:06 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* include/ruby/node.h: add new constants for rb_call()'s scope.

	* eval.c (iterate_method): use CALL_* scope constant to specify
	  proper scope value.

	* eval.c (rb_each, rb_apply, rb_funcall, rb_funcall2, rb_funcall3):
	  ditto.

Tue Apr  1 21:19:41 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* rational.c: need to include <float.h> just once.

Tue Apr  1 16:40:21 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (big2dbl): more precise conversion at edge cases.
	  [ruby-dev:34195]

Tue Apr  1 14:43:38 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: get rid of empty expansion.

	* configure.in: _setjmp is available but _longjmp is not on mingw.

Tue Apr  1 09:41:22 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* {bcc,win}32/Makefile (config.h): need to define RUBY_SETJMP, etc.
